--- a/cadastro.html
+++ b/cadastro.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Track</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="images/logo_size.ico"/>
-    <link rel="icon" type="image/x-icon" href="images/logo_size.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo_size.ico">
+    <link rel="icon" type="image/x-icon" href="images/logo_size.ico">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -19,31 +19,30 @@
         <p>O melhor jeito de acompanhar seu estilo de vida e criar novos hábitos saudáveis.</p>
     </hearder>
 
-    <form class="main-form" method="post">
+    <form class="main-form" method="post" id="formulario_cadastro">
     <fieldset class="form-group">
         <legend>Informações Pessoais</legend>
         <div class="form-group">
             <label class="textlabel">Nome Completo</label>
-            <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control" maxlength="70" required="required" />
+            <input id="nomeInput" name="nome" type="text" autofocus="autofocus" class="form-control" maxlength="70" required>
         </div>
         <div class="form-group">
             <label class="textlabel">Data de nascimento</label>
-            <input id="dataInput" name="data" type="date" class="form-control" />
+            <input id="dataInput" name="data" type="date" class="form-control" required>
         </div>
 
-        <div class="form-row">
-            <div class="col">
-                <label class="textlabel">Selecione seu genero</label>
-                    <select id="genero" class="custom-select">
-                        <option label="Feminino" value="fem"></option>
-                        <option label="Masculino" value="masc"></option>
-                        <option label="Prefiro não responder" value="sem_resposta"></option>
-                    </select>
-            </div>
-            <div class="col">
-                <label class="textlabel">Altura (em metros)</label>
-                <input id="alturaInput" name="altura" type="number" class="form-control" />
-            </div>
+        <div class="form-group">
+            <label class="textlabel">Selecione seu genero</label><br>
+                <input type="radio" id="masculino" name="genero" value="masculino" checked="checked">
+                    <label for="masculino">Masculino</label><br>
+                <input type="radio" id="feminino" name="genero" value="feminino">
+                    <label for="feminino">Feminino</label><br>
+                <input type="radio" id="outro" name="genero" value="outro">
+                    <label for="outro">Outro</label>
+        </div>
+        <div class="form-group">
+            <label class="textlabel">Altura (em metros)</label>
+            <input id="alturaInput" name="altura" type="number" class="form-control" required>
         </div>
     </fieldset>
 
@@ -51,16 +50,16 @@
         <legend>Informações de Acesso</legend>
         <div class="form-group">
             <label class="textlabel">E-mail</label>
-            <input id="emailInput" name="email" type="email" class="form-control" required="required"/>
+            <input id="emailInput" name="email" type="email" class="form-control" required>
             <small id="emailHelp" class="form-text text-muted">Nunca iremos compartilhar seu e-mail com ninguém.</small>
         </div>
         <div class="form-group">
             <label class="textlabel">Senha (sua senha deve possuir 8 caracteres com letras e números)</label>
-            <input id="senhaInput" name="senha" type="password" class="form-control" required="required"/>
+            <input id="senhaInput" name="senha" type="password" class="form-control" maxlength="8" required>
         </div>
         <div class="form-group">
             <p>Digite sua senha novamente para confirmação.</p>
-            <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control" required="required"/>
+            <input id="senha_confirma_Input" name="senha_confirma" type="password" class="form-control" maxlength="8" required>
         </div>
     </fieldset>
     </form>
