--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Track</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="images/logo_size.ico"/>
-    <link rel="icon" type="image/x-icon" href="images/logo_size.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo_size.ico">
+    <link rel="icon" type="image/x-icon" href="images/logo_size.ico">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
@@ -19,12 +19,12 @@
         <p>O melhor jeito de acompanhar seu estilo de vida e criar novos hábitos saudáveis.</p>
     </hearder>
 
-    <form class="form-login" method="POST">
+    <form class="form-login" method="POST" id="login">
         <div class="form-group">
-            <input id="email_acesso" type="text" autofocus="autofocus" class="form-control" placeholder="Email" />
+            <input id="email_acesso" type="text" autofocus="autofocus" class="form-control" placeholder="Email" required>
         </div>
         <div class="form-group">
-            <input id="senha_acesso" type="password" class="form-control" placeholder="Senha" />
+            <input id="senha_acesso" type="password" class="form-control" placeholder="Senha" maxlength="8" required>
         </div>
     </form>
     <div>
@@ -35,7 +35,7 @@
     <a class="btn btn-success" href="home.html">LOGIN</a>
 
     <footer>
-        <hr/>
+        <hr>
         &copy; Desenvolvido por Cynthia Oka 2020
     </footer>
 </body>
