--- a/cadastro.html
+++ b/cadastro.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="description" content="saude, fitness">
+    <meta name="author" content="Cynthia Oka">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Health Track</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="images/logo_size.ico">
     <link rel="icon" type="image/x-icon" href="images/logo_size.ico">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap-4.5.0-dist/css/bootstrap.min.css">
 
 </head>
 <body>
@@ -66,12 +72,14 @@
         <br><br><br><br>
     <div class="centraliza-button">
         <!--<input type="submit" class="btn btn-success" value="Finalizar Cadastro" />-->
-        <a class="btn btn-success" href="home.html">CADASTRAR</a>
+        <a type="button" class="btn btn-danger" href="home.html">CADASTRAR</a>
     </div>
 
     <footer>
         <hr>
         &copy; Desenvolvido por Cynthia Oka 2020
     </footer>
+    <script src="bootstrap/bootstrap-4.5.0-dist/js/jquery-migrate-1.4.1.min.js"></script>
+    <script src="bootstrap/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
