--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             <figure id="logo">
                 <img id="imagem-logo" src="images/logo_HT.jpg" alt="Logo Health Track">
             </figure>
-            <p>O melhor jeito de acompanhar seu estilo de vida e criar novos hábitos saudáveis.</p>
+            <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
         </hearder>
 
         <form class="form-login" method="POST" id="login">
