--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <hearder>
             <div id="logo">
-                <img src="images/logo_HT.jpg" alt="Logo Health Track">
+                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="500px">
             </div>
             <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
         </hearder>
@@ -40,12 +40,14 @@
 
                 <div class="form-group">
                     <label class="textlabel">Selecione seu genero</label><br>
+                    <div id="escolhe-genero">
                         <input type="radio" id="masculino" name="genero" value="masculino" checked="checked">
                             <label for="masculino">Masculino</label><br>
                         <input type="radio" id="feminino" name="genero" value="feminino">
                             <label for="feminino">Feminino</label><br>
                         <input type="radio" id="outro" name="genero" value="outro">
                             <label for="outro">Outro</label>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="textlabel">Altura (em metros)</label>
