--- a/HT/cadastro.html
+++ b/HT/cadastro.html
@@ -73,7 +73,7 @@
             </fieldset>
             <div id="centraliza-button">
                 <!--<input type="submit" class="btn btn-success" value="Finalizar Cadastro" />-->
-                <a type="button" class="btn btn-danger" href="home.html">CADASTRAR</a>
+                <a type="button" class="btn btn-danger" href="dashboard.html">CADASTRAR</a>
             </div>
         </form>
             <br><br><br><br>
