--- a/HT/login.html
+++ b/HT/login.html
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <input id="senha_acesso" type="password" class="form-control" placeholder="Senha" maxlength="8" required>
                         </div>
-                        <a type="button" class="btn btn-danger" href="home.html">LOGIN</a>
+                        <a type="button" class="btn btn-danger" href="dashboard.html">LOGIN</a>
                         <!--<button class="btn btn-success" onclick="">LOGIN</button>-->
                     </form>
                     </div>
