--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -19,62 +19,61 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8" id="ajuste-nav">
-                <nav class="navbar navbar-expand-lg navbar-custom">
-                    <a class="navbar-brand" href="dashboard.html">Dashboard</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="dashboard.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Alimentação</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Exercícios Físicos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Medidas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Peso</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pressão Arterial</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cadastro.html">Configurações</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
+
+        <hearder>
+            <div id="logo">
+                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="500px">
             </div>
-            <div class="col-md-4">
-                <img src="images/logo_HT.jpg" alt="Logo Health Track" width="250px">
+            <h1 id="frase">A melhor maneira de acompanhar seu estilo de vida e criar novos hábitos saudáveis</h1>
+        </hearder>
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="dashboard.html">Dashboard</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="dashboard.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Alimentação</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Exercícios Físicos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Medidas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Peso</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pressão Arterial</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cadastro.html">Configurações</a>
+                </li>
+                </ul>
             </div>
-        </div>
-        <div class="row">
-            <section class="col-md-8">
-                <div id="conjunto-peso-dash">
-                    <p id="peso-dash">1.6 Kg</p>
-                    <p id="texto-peso-dash">adquiridos em Maio</p>
-                </div>
-                <div class="estatistica-dash">
-                    <p>Tempo de exercício neste mês: 120 minutos</p>
-                </div>
-                <div class="estatistica-dash">
-                    <p>Média de atividade por dia: 20 minutos</p>
-                </div>
-                <div class="estatistica-dash">
-                    <p>Média de calorias diárias: 1425 calorias</p>
-                </div>
-            </section>
-            <section class="col-md-4">Incentivo teste</section>
-        </div>
+        </nav>
+
+        <section class="section-dash">
+            <div id="conjunto-peso-dash">
+                <p id="peso-dash">1.6 Kg</p>
+                <p id="texto-peso-dash">adquiridos em Maio</p>
+            </div>
+            <div class="estatistica-dash">
+                <p>Tempo de exercício neste mês: 120 minutos</p>
+            </div>
+            <div class="estatistica-dash">
+                <p>Média de atividade por dia: 20 minutos</p>
+            </div>
+            <div class="estatistica-dash">
+                <p>Média de calorias diárias: 1425 calorias</p>
+            </div>
+        </section>
 
         <footer>
             <hr>
@@ -82,7 +81,8 @@
         </footer>
     </div>
 
-    <script src="bootstrap/bootstrap-4.5.0-dist/js/jquery-migrate-1.4.1.min.js"></script>
-    <script src="bootstrap/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
