--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -28,7 +28,7 @@
         </hearder>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="dashboard.html">Dashboard</a>
+            <a class="navbar-brand" href="dashboard.html"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
