--- a/HT/dashboard.html
+++ b/HT/dashboard.html
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="cadastro.html"><i class="fas fa-user-cog"></i>Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-utensils"></i>Alimentação</a>
+                    <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-running"></i>Exercícios Físicos</a>
