--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -183,7 +183,7 @@
             </div>
         </div>
         <div class="add-ref">
-            <a type="button" class="btn btn-secondary" href="dashboard.html">ADICIONAR REFEIÇÃO</a>
+            <a type="button" class="btn btn-secondary" href="alimentos_edit.html">ADICIONAR REFEIÇÃO</a>
         </div>
     </div>
 
