--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-running"></i>Exercícios Físicos</a>
+                    <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-pencil-ruler"></i>Medidas</a>
