--- a/HT/alimentos_home.html
+++ b/HT/alimentos_home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
     
         <meta charset="UTF-8">
@@ -47,13 +47,13 @@
                     <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-pencil-ruler"></i>Medidas</a>
+                    <a class="nav-link" href="medidas_home.html"><i class="fas fa-pencil-ruler"></i>Medidas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-weight"></i>Peso</a>
+                    <a class="nav-link" href="peso_home.html"><i class="fas fa-weight"></i>Peso</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
+                    <a class="nav-link" href="pressao_home.html"><i class="fas fa-heartbeat"></i>Pressão Arterial</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i>Logout</a>
@@ -186,7 +186,6 @@
             <a type="button" class="btn btn-secondary" href="alimentos_edit.html">ADICIONAR REFEIÇÃO</a>
         </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
