--- a/HT/medidas_home.html
+++ b/HT/medidas_home.html
@@ -43,10 +43,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="alimentos_home.html"><i class="fas fa-utensils"></i>Alimentação</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="exercicios_home.html"><i class="fas fa-running"></i>Exercícios Físicos</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="medidas_home.html"><i class="fas fa-pencil-ruler"></i>Medidas</a>
                 </li>
                 <li class="nav-item">
@@ -61,47 +61,90 @@
                 </ul>
             </div>
         </nav>
+
         <div class="container">
             <div class="row" id="item-list">
-                <div class="col-2">
-                    22/05/2020
+                <div class="col">
+                    Data
                 </div>
-                <div class="col-2">
-                    Caminhada
+                <div class="col">
+                    Braço (cm)
                 </div>
-                <div class="col-4">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fugit aut architecto id impedit, mollitia illo tempore, eum, explicabo error ullam natus voluptates modi provident sunt sit quas ex officia.
+                <div class="col">
+                    Peito (cm)
                 </div>
-                <div class="col-2">
-                    320kcal
+                <div class="col">
+                    Cintura (cm)
                 </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="exercicios_edit.html"><i class="far fa-edit"></i></a>
+                <div class="col">
+                    Quadril (cm)
+                </div>
+                <div class="col">
+                    Coxa (cm)
+                </div>
+                <div class="col">
+                    Paturrilha (cm)
+                </div>
+                <div class="col">
                 </div>
             </div>
             <div class="row" id="item-list">
-                <div class="col-2">
+                <div class="col">
                     22/05/2020
                 </div>
-                <div class="col-2">
-                    Musculação
+                <div class="col">
+                    40
                 </div>
-                <div class="col-4">
-                    Treino de pernas 30 minutos.
+                <div class="col">
+                    90
                 </div>
-                <div class="col-2">
-                    225kcal
+                <div class="col">
+                    65
                 </div>
-                <div class="col-2">
-                    <a class="icon-edit-ref" href="exercicios_edit.html"><i class="far fa-edit"></i></a>
+                <div class="col">
+                    90
+                </div>
+                <div class="col">
+                    65
+                </div>
+                <div class="col">
+                    40
+                </div>
+                <div class="col">
+                    <a class="icon-edit-ref" href="medidas_edit.html"><i class="far fa-edit"></i></a>
+                </div>
+            </div>
+            <div class="row" id="item-list">
+                <div class="col">
+                    22/05/2020
+                </div>
+                <div class="col">
+                    40
+                </div>
+                <div class="col">
+                    90
+                </div>
+                <div class="col">
+                    65
+                </div>
+                <div class="col">
+                    90
+                </div>
+                <div class="col">
+                    65
+                </div>
+                <div class="col">
+                    40
+                </div>
+                <div class="col">
+                    <a class="icon-edit-ref" href="medidas_edit.html"><i class="far fa-edit"></i></a>
                 </div>
             </div>
         </div>
         <div class="add-ref">
-            <a type="button" class="btn btn-secondary" href="exercicios_edit.html">ADICIONAR ATIVIDADE FÍSICA</a>
+            <a type="button" class="btn btn-secondary" href="exercicios_edit.html">ADICIONAR MEDIDAS CORPORAIS</a>
         </div>
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
