Ajustes nos links

--- a/HT/peso_home.html
+++ b/HT/peso_home.html
@@ -70,12 +70,12 @@
                     55
                 </div>
                 <div class="col">
-                    <a class="icon-edit-ref" href="exercicios_edit.html"><i class="far fa-edit"></i></a>
+                    <a class="icon-edit-ref" href="peso_edit.html"><i class="far fa-edit"></i></a>
                 </div>
             </div>
         </div>
         <div class="add-ref">
-            <a type="button" class="btn btn-secondary" href="exercicios_edit.html">ADICIONAR PESO</a>
+            <a type="button" class="btn btn-secondary" href="peso_edit.html">ADICIONAR PESO</a>
         </div>
     </div>
 
